--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="360dp"
         android:fontFamily="@font/poppins_semibold"
         android:textSize="35sp"
+        android:textColor="@color/black"
         android:text="Register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
