--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white_transparent">#50FFFFFF</color>
+    <color name="gray">#25FFFFFF</color>
+    <color name="dark_blue">#050544</color>
 </resources>
