--- a/app/src/main/res/layout/activity_wellcome.xml
+++ b/app/src/main/res/layout/activity_wellcome.xml
@@ -11,7 +11,7 @@
         android:id="@+id/ivZenV"
         android:layout_width="143dp"
         android:layout_height="39dp"
-        android:layout_marginTop="332dp"
+        android:layout_marginTop="104dp"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
 
     <Button
         android:id="@+id/btnLoginGoogle"
-        android:layout_width="match_parent"
+        android:layout_width="360dp"
         android:layout_height="60dp"
         android:layout_marginTop="60dp"
         android:fontFamily="@font/poppins_regular"
@@ -62,22 +62,21 @@
         android:textAllCaps="false"
         android:text="Masuk dengan Google"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvIntro" />
+        app:layout_constraintTop_toBottomOf="@+id/tvIntro"/>
 
     <Button
-        android:id="@+id/btnLoginEmail"
-        android:layout_width="match_parent"
+        android:id="@+id/btnLoginFacebook"
+        android:layout_width="360dp"
         android:layout_height="60dp"
         android:layout_marginHorizontal="35dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/glass"
-        android:drawableStart="@drawable/icon_gmail"
+        android:drawableStart="@drawable/icon_facebook"
         android:fontFamily="@font/poppins_regular"
         android:paddingHorizontal="30dp"
         android:paddingEnd="50dp"
-        android:text="Masuk dengan Email"
+        android:text="Masuk dengan Facebook"
         android:textAllCaps="false"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -89,25 +88,28 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/poppins_regular"
         android:text="Belum memiliki akun?"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLoginEmail"
-        app:layout_constraintVertical_bias="0.017" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="92dp"
-        android:layout_marginBottom="112dp"
-        android:fontFamily="@font/poppins_semibold"
+        android:id="@+id/linkRegister"
+        android:layout_width="63dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/poppins_regular"
         android:text="Register"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView" />
+        app:layout_constraintHorizontal_bias="0.537"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
