--- a/app/src/main/res/drawable/clicked_btn_theme.xml
+++ b/app/src/main/res/drawable/clicked_btn_theme.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/dark_blue" />
     <stroke
-        android:width="2dp"
-        android:color="@color/black" />
+        android:width="1dp"
+        android:color="@color/white" />
     <corners android:radius="35dp" />
 </shape>
