--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,6 +7,18 @@
     android:background="@drawable/bg"
     tools:context=".RegisterActivity">
 
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="25.97dp"
+        android:layout_height="25.97dp"
+        android:background="@drawable/backarrow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.072"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.06" />
+
     <ImageView
         android:id="@+id/ivLogo"
         android:layout_width="97dp"
@@ -24,11 +36,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semibold"
-<<<<<<< HEAD
-=======
-        android:textSize="35sp"
-        android:textColor="@color/black"
->>>>>>> 72d98e79988a409ec8c7dd1048a5f116e802fee8
         android:text="Register"
         android:textColor="@color/dark_blue"
         android:textSize="30sp"
@@ -37,12 +44,12 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.241" />
+        app:layout_constraintVertical_bias="0.191" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="525dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,10 +83,12 @@
                 android:layout_height="55dp"
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="8dp"
+                android:paddingStart="30dp"
                 android:background="@drawable/bget"
                 android:fontFamily="@font/poppins_regular"
-                android:hint="    Masukan alamat email"
-                android:textColor="@color/gray"
+                android:hint="Masukan alamat email"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
@@ -105,10 +114,12 @@
                 android:layout_height="55dp"
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="8dp"
+                android:paddingStart="30dp"
                 android:background="@drawable/bget"
                 android:fontFamily="@font/poppins_regular"
-                android:hint="    Buat password"
-                android:textColor="@color/gray"
+                android:hint="Buat password"
+                android:textColor="@color/black"
+                android:inputType="textPassword"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
@@ -134,24 +145,26 @@
                 android:layout_height="55dp"
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="8dp"
+                android:paddingStart="30dp"
                 android:background="@drawable/bget"
                 android:fontFamily="@font/poppins_regular"
-                android:hint="    Konfirmasi password"
-                android:textColor="@color/gray"
+                android:hint="Konfirmasi password"
+                android:textColor="@color/black"
+                android:inputType="textPassword"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvConfirmPassword" />
 
             <Button
-                android:id="@+id/btnLogin"
+                android:id="@+id/btnRegister"
                 android:layout_width="115dp"
                 android:layout_height="35dp"
                 android:layout_marginTop="32dp"
-                android:background="@drawable/btn_theme"
+                android:background="@drawable/clicked_btn_theme"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="Register"
-                android:textColor="@color/white"
                 android:textAllCaps="false"
+                android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />
@@ -160,27 +173,28 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="80dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Sudah memiliki akun?"
                 android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.309"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
 
             <TextView
-                android:id="@+id/tvLogin"
+                android:id="@+id/linkLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="80dp"
+                android:layout_marginStart="30dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="Login"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.666"
-                app:layout_constraintStart_toEndOf="@+id/textView"
-                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+                app:layout_constraintHorizontal_bias="0.674"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
