--- a/app/src/main/res/layout/activity_wellcome.xml
+++ b/app/src/main/res/layout/activity_wellcome.xml
@@ -11,7 +11,7 @@
         android:id="@+id/ivZenV"
         android:layout_width="143dp"
         android:layout_height="39dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="160dp"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +94,7 @@
         android:text="Belum memiliki akun?"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.257"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook" />
 
@@ -102,14 +102,14 @@
         android:id="@+id/linkRegister"
         android:layout_width="63dp"
         android:layout_height="25dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginEnd="48dp"
         android:layout_marginTop="12dp"
-        android:fontFamily="@font/poppins_regular"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Register"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.537"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
