--- a/app/src/main/res/layout/activity_wellcome.xml
+++ b/app/src/main/res/layout/activity_wellcome.xml
@@ -92,6 +92,7 @@
         android:layout_marginTop="12dp"
         android:fontFamily="@font/poppins_regular"
         android:text="Belum memiliki akun?"
+        android:gravity="center_horizontal"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.257"
@@ -106,6 +107,7 @@
         android:layout_marginTop="12dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="Register"
+        android:gravity="center_horizontal"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.09"
