Add splashScreen, Add animation button, fixed RegisterActivity

--- a/app/src/main/res/layout/activity_wellcome.xml
+++ b/app/src/main/res/layout/activity_wellcome.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/poppins_regular"
-        android:text="Temukan wawasan baru &amp; \nkesempatan belajar menarik!"
+        android:text="Temukan wawasan baru \nkesempatan belajar menarik!"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,6 +107,8 @@
         android:fontFamily="@font/poppins_regular"
         android:text="Register"
         android:textColor="@color/black"
+        android:textStyle="bold"
+        android:linksClickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
