--- a/app/src/main/res/drawable/clicked_btn_theme.xml
+++ b/app/src/main/res/drawable/clicked_btn_theme.xml
@@ -3,6 +3,6 @@
     <solid android:color="@color/dark_blue" />
     <stroke
         android:width="1dp"
-        android:color="@color/white" />
+        android:color="@color/black" />
     <corners android:radius="35dp" />
 </shape>
