--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="white_transparent">#50FFFFFF</color>
     <color name="gray">#25FFFFFF</color>
     <color name="dark_blue">#050544</color>
+    <color name="purple">#800080</color>
 </resources>
