add aksi user ketika mengclick edit text, add jika mengclick editText maka akan muncul keyboard kemudian klik di luat keyboard untuk menutup, add link tree, add animation frame clicked

--- a/app/src/main/res/layout/activity_interest.xml
+++ b/app/src/main/res/layout/activity_interest.xml
@@ -199,7 +199,7 @@
     <Button
         android:layout_width="115.16dp"
         android:layout_height="34dp"
-        android:background="@drawable/clicked_btn_theme"
+        android:background="@drawable/btn_theme_2"
         android:fontFamily="@font/poppins_regular"
         android:text="Simpan"
         android:textColor="@color/white"
