--- a/app/src/main/res/layout/activity_wellcome.xml
+++ b/app/src/main/res/layout/activity_wellcome.xml
@@ -51,16 +51,17 @@
         android:id="@+id/btnLoginGoogle"
         android:layout_width="360dp"
         android:layout_height="60dp"
-        android:layout_marginTop="60dp"
-        android:fontFamily="@font/poppins_regular"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:paddingHorizontal="52dp"
+        android:layout_marginHorizontal="35dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/glass"
         android:drawableStart="@drawable/icon_google"
-        android:layout_marginHorizontal="35dp"
-        android:textAllCaps="false"
+        android:fontFamily="@font/poppins_regular"
+        android:paddingHorizontal="30dp"
+        android:paddingEnd="76dp"
         android:text="Masuk dengan Google"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvIntro"/>
