--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -4,9 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="15dp"
-    android:layout_marginBottom="14dp"
-    android:backgroundTint="@color/white_transparent">
+    app:cardCornerRadius="35dp"
+    android:layout_marginBottom="14dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -15,7 +14,7 @@
             android:padding="12dp">
 
             <ImageView
-                android:id="@+id/iv_photo1"
+                android:id="@+id/iv_photo"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@drawable/poster" />
@@ -30,11 +29,11 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tv_photo1"
+                    android:id="@+id/tv_photo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="Rahasia menggunakan AI dalam digital imaging bagi pemula"
+                    android:text="test"
                     android:textColor="@color/dark_blue"
                     android:textSize="13sp"
                     android:textStyle="bold" />
@@ -49,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_regular"
                     android:maxLength="100"
-                    android:text="Seminar by boncabe class"
+                    android:text="test"
                     android:textColor="@color/dark_blue"
                     android:textSize="10sp" />
 
@@ -63,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_regular"
                     android:maxLength="100"
-                    android:text="29 September 2023 | Online"
+                    android:text="test"
                     android:textColor="@color/dark_blue"
                     android:textSize="10sp"
                     android:textStyle="bold" />
