--- a/app/src/main/res/layout/activity_interest.xml
+++ b/app/src/main/res/layout/activity_interest.xml
@@ -197,6 +197,7 @@
         app:layout_constraintVertical_bias="0.409" />
 
     <Button
+        android:id="@+id/btnSimpan"
         android:layout_width="115.16dp"
         android:layout_height="34dp"
         android:background="@drawable/btn_theme_2"
