--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,6 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -62,19 +61,18 @@
                 app:layout_constraintStart_toEndOf="@+id/tvHiMessage"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.SearchView
+            <EditText
                 android:id="@+id/searchView"
-                android:layout_width="match_parent"
+                android:layout_width="360dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/glass"
-                app:iconifiedByDefault="false"
+                android:paddingStart="30dp"
+                android:text="Yuk cari kegiatan kamu di sini"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.49"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivProfile"
-                app:queryBackground="@color/white_transparent"
-                app:queryHint="Yuk cari kegiatanmu di sini" />
+                app:layout_constraintTop_toBottomOf="@+id/ivProfile" />
 
             <FrameLayout
                 android:id="@+id/flWebinar"
@@ -170,11 +168,14 @@
 
             <FrameLayout
                 android:id="@+id/frameLayout2"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginTop="28dp"
+                android:layout_width="360dp"
+                android:layout_height="40dp"
                 android:background="@drawable/glass"
-                app:layout_constraintTop_toBottomOf="@+id/textView6"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintVertical_bias="0.5"
                 tools:layout_editor_absoluteX="0dp">
 
                 <LinearLayout
@@ -183,23 +184,23 @@
                     android:layout_gravity="center"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="60dp"
-                        android:fontFamily="@font/poppins_semibold"
+                    <Button
+                        android:layout_width="170dp"
+                        android:layout_height="28dp"
+                        android:fontFamily="@font/poppins_regular"
                         android:text="Popular"
-                        android:textColor="@color/dark_blue"
-                        android:textSize="15sp" />
+                        android:textColor="@color/white"
+                        android:textSize="13sp"
+                        android:background="@drawable/btn_theme_2"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="60dp"
+                    <Button
+                        android:layout_width="170dp"
+                        android:layout_height="28dp"
                         android:fontFamily="@font/poppins_semibold"
                         android:text="Newest"
                         android:textColor="@color/dark_blue"
-                        android:textSize="15sp" />
+                        android:textSize="13sp"
+                        android:background="@color/no_color"/>
                 </LinearLayout>
             </FrameLayout>
 
@@ -219,8 +220,9 @@
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/card1"
-                        android:layout_width="match_parent"
+                        android:layout_width="360dp"
                         android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal"
                         tools:listitem="@layout/card_item"/>
                 </ScrollView>
 
