--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="blue">#072F80</color>
     <color name="purple">#800080</color>
     <color name="no_color">#00000000</color>
+    <color name="orange">#FFFF5722</color>
 </resources>
