--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/iv_photo"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/poster" />
+                android:src="@drawable/photo1" />
 
             <Space
                 android:layout_width="12dp"
